# ContextVault

./: .env.example  .gitignore  README.md  alembic.ini  dev.sh  docker-compose.yml  pyproject.toml
.claude/skills/work-on-card/: SKILL.md
.github/workflows/: ci.yml
docs/: HANDOFF.md  architecture.md
docs/superpowers/plans/: 2026-07-22-image-and-web-sources.md  2026-07-23-db-reports.md  2026-07-23-gemini-embeddings.md  2026-07-23-persisted-conversations-and-gap-rejection.md  2026-07-24-custom-openai-compatible-provider.md  2026-07-24-frontend-redesign-sidebar.md
docs/superpowers/specs/: 2026-07-07-contextvault-design.md  2026-07-22-heic-image-support-design.md  2026-07-22-i18n-uk-design.md  2026-07-22-image-and-web-sources-design.md  2026-07-22-model-dropdown-design.md  2026-07-23-db-reports-design.md  2026-07-23-gemini-embeddings-design.md  (+3 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
frontend/e2e/: admin.spec.ts  custom-provider.spec.ts  llm-config.spec.ts  providers.spec.ts  query.spec.ts  sources.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: 0001_enable_pgvector.py  1c6015cebe15_source_ingestion_status_error.py  550f1a28b886_query_logs_table.py  a1b2c3d4e5f6_image_web_sources.py  b6be69ab221b_hnsw_ann_index_on_chunks_embedding.py  b8c2d5e7f901_db_reports_tables.py  c1d2e3f40506_custom_provider.py  c800a89250e1_core_schema_users_repositories_sources_.py  d4f1a2b7c9e0_global_provider_settings.py  ed2189c1cf01_repository_llm_config.py  f170138d3652_conversations_and_conversation_turns.py  f333a95e2154_gap_rejections.py  ff19c3137fec_invitations_table.py
src/contextvault/: __init__.py  cli.py  main.py
tests/: conftest.py  test_admin_notes_api.py  test_admin_repositories_api.py  test_analytics_api.py  test_auth.py  test_bootstrap.py  test_chunking.py  test_cli.py  test_config_env_isolation.py  test_conversation_model.py  test_conversations_api.py  test_conversations_service.py  test_crypto.py  test_database_api.py  test_db.py  test_embedder_dependency.py  test_embeddings.py  test_gap_rejection_model.py  test_gemini_embeddings_e2e.py  test_grants_api.py  test_health.py  test_ingestion_pipeline.py  test_invitations_api.py  test_invite_tokens.py  test_knowledge_gaps_api.py  test_knowledge_gaps_service.py  test_llm_anthropic.py  test_llm_base.py  test_llm_citations.py  test_llm_factory.py  test_llm_gemini.py  test_llm_models.py  test_llm_ocr.py  test_llm_openai.py  test_llm_openrouter.py  test_llm_textgen.py  test_models.py  test_parsing.py  test_password_recovery_api.py  test_providers_api.py  (+26 more)
(+151 files in other folders)
